# cellpose-segmentation

./: .gitignore  README.md  pyproject.toml
src/: count.py  main.py  segmentation.py  utils.py
